rbx_binary/src/weak/tests/snapshots/rbx_binary__weak__tests__util__three-uigradients__decoded.snap
---
source: rbx_binary/src/weak/tests/util.rs
expression: decoded_viewed
---
- referent: referent-0
  name: UIGradient
  class: UIGradient
  properties:
    Attributes:
      Attributes: {}
    Color:
      ColorSequence:
        keypoints:
          - time: 0
            color:
              - 1
              - 1
              - 1
          - time: 1
            color:
              - 1
              - 1
              - 1
    Enabled:
      Bool: true
    Offset:
      Vector2:
        - 0
        - 0
    Rotation:
      Float32: 0
    SourceAssetId:
      Int64: -1
    Tags:
      Tags: []
    Transparency:
      NumberSequence:
        keypoints:
          - time: 0
            value: 0.5
            envelope: 0
          - time: 0.2
            value: 0.75
            envelope: 0
          - time: 0.5
            value: 0
            envelope: 0
          - time: 0.6
            value: 0.8
            envelope: 0
          - time: 1
            value: 1
            envelope: 0
  children: []
- referent: referent-1
  name: UIGradient
  class: UIGradient
  properties:
    Attributes:
      Attributes: {}
    Color:
      ColorSequence:
        keypoints:
          - time: 0
            color:
              - 1
              - 1
              - 1
          - time: 1
            color:
              - 1
              - 1
              - 1
    Enabled:
      Bool: true
    Offset:
      Vector2:
        - 0
        - 0
    Rotation:
      Float32: 0
    SourceAssetId:
      Int64: -1
    Tags:
      Tags: []
    Transparency:
      NumberSequence:
        keypoints:
          - time: 0
            value: 0
            envelope: 0
          - time: 0.5
            value: 1
            envelope: 0
          - time: 1
            value: 0
            envelope: 0
  children: []
- referent: referent-2
  name: UIGradient
  class: UIGradient
  properties:
    Attributes:
      Attributes: {}
    Color:
      ColorSequence:
        keypoints:
          - time: 0
            color:
              - 1
              - 1
              - 1
          - time: 1
            color:
              - 1
              - 1
              - 1
    Enabled:
      Bool: true
    Offset:
      Vector2:
        - 0
        - 0
    Rotation:
      Float32: 0
    SourceAssetId:
      Int64: -1
    Tags:
      Tags: []
    Transparency:
      NumberSequence:
        keypoints:
          - time: 0
            value: 0
            envelope: 0
          - time: 1
            value: 0
            envelope: 0
  children: []
